# dotfiles

./: .chezmoi.toml.tmpl  .chezmoi.yaml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .tmux.conf  .zshrc  Makefile  deploy.sh  dot_bash_profile  dot_gitconfig  dot_gitconfig-harnoldcodes  dot_gitconfig.tmpl  dot_wezterm.lua  dot_zprofile  dot_zshrc  dot_zshrc.config  dot_zshrc.config.tmpl  dot_zshrc_old  encrypted_dot_gitconfig-discord.age  encrypted_dot_gitconfig-harnold.age  encrypted_dot_gitconfig-personal.age  encrypted_dot_gitconfig-work.age  hyper.js  private_dot_zimrc  private_dot_zshrc  run_onchange_linux-install-packages.ps1.tmpl  run_onchange_linux-install-packages.sh.tmpl  run_onchange_powershell-setup.ps1  run_onchange_windows-install-packages.ps1.tmpl  surface.txt  tmux.conf  update.sh  vscode-extensions.txt  zpreztorc  zshrc  zshrc.config  zshrc.eric
.chezmoidata/: packages.yaml
.chezmoiscripts/: run_onchange_after_cmux-config.sh.tmpl  run_onchange_after_nvim-lazy-restore.sh.tmpl
.teamocil/: db-build.sh  db.yml  db.yml.template  grid.yml  tm.yml
AppData/Roaming/: topgrade.toml
Documents/PowerShell/: Microsoft.PowerShell_profile.ps1  powershell.config.json  profile.ps1
dot_config/: CLAUDE.md  executable_colorscheme.sh  komorebi-switcher.toml  starship.toml  symlink_nu.tmpl  whkdrc
dot_config/WindHawk/: Taskbar Styler.yml
dot_config/aerospace/: AEROSPACE-ULTRAWIDE-FORK.md  (+1 more)
dot_config/aerospace/helper/: Cargo.toml
dot_config/aerospace/helper/src/: main.rs  notify.rs
dot_glaze-wm/: config.yaml
dot_hammerspoon/: init.lua
dot_ssh/: config  private_config
dot_wezterm/: keymaps.lua  terminal.lua  windows.lua
osx/: setup-osx.sh
prompts/: prompt_litex_setup
scripts/: configure_mac_defaults.sh  deploy-remote.sh  install_brew.sh  install_brew_packages.sh  install_dotfiles.sh  install_fonts.sh  install_powerline_fonts.sh  install_python_modules.sh  install_zinit.sh
themes/: litex.zsh-theme
vim/: gvimrc  vimrc.before.local  vimrc.bundles.local  vimrc.local
(+290 files in other folders)
